<resources>
    <string name="app_name">Лицей в цифре</string>
    <string name="you_may_change_lyceum_class_in_settings">Позже Вы сможете поменять свой класс в настройках.</string>
    <string name="about_app">about_app</string>
    <string name="website_link">http://lava-land.ru/</string>
    <string name="website">Сайт \"Лицей в цифре\":</string>
    <string name="telegram_bot">Telegram-Бот \"Лицей в цифре\":</string>
    <string name="cancel">назад</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="thursday">Чт</string>
    <string name="wednesday">Ср</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_school">Выберите свою школу:</string>
    <string name="next">Далее</string>
    <string name="no_response_header">Что то пошло не так…</string>
    <string name="no_response_description">Проверьте подключение к Интернету или попробуйте позже.</string>
    <string name="try_again">Попробовать снова</string>
    <string name="choose_your_grade">Выберите свой класс обучения:</string>
    <string name="lesson_not_required">Урок-факультатив</string>
    <string name="change_school_and_grade">Сменить школу и класс обучения</string>
    <string name="amount_attempts_to_server_limit">Вы пытались связаться с сервером очень много раз.\nСледующая попытка через %d</string>
    <string name="we_are_downloading_data_please_wait">Загружаем данные с сервера.\nПожалуйста, подождите…</string>
    <string name="lesson_time">%02d:%02d - %02d:%02d</string>
    <string name="warning_lessons_must_not_be_actual">Нам не удалось связаться с сервером, поэтому расписание уроков и другая информация может быть устаревшей!</string>
    <string name="no_school_address">Без адреса.</string>
    <string name="no_school_name">Без имени.</string>
    <string name="next_lesson_is_in_time">Следующий урок начнется через %d дней, %02d часов и %02d минут.</string>
    <string name="no_grades_for_school_description">Не удалось загрузить список классов для выбранной образовательной организации.\nЕсли вы считаете, что произошла ошибка, пожалуйста, свяжитесь с нами:\n</string>
    <string name="no_schools_description">Нам не удалось загрузить список школ. Сервер работает, но возвращает в качестве ответа пустой список школ… Пожалуйста, попробуйте загрузить список школ снова, а если ошибка возникнет снова, то попробуйте позже. Также вы можете связаться с нами:\n</string>
    <string name="no_subgroups_for_grade_description">Не удалось загрузить список субгрупп для выбранного класса.\nЕсли вы считаете, что произошла ошибка, пожалуйста, свяжитесь с нами:\n</string>
    <string name="no_subgroups_for_school_description">Не удалось загрузить список субгрупп для выбранного класса.\nНо так как в данной образовательной организации всего один класс, то Вам нужно выбрать другую образовательную организацию.\nЕсли вы считаете, что произошла ошибка, пожалуйста, свяжитесь с нами:\n</string>
    <string name="lesson_schedule_text_header">Класс: %s, группа: %s</string>
    <string name="week">Неделя %d</string>
    <string name="pick_school_again">Выбрать другую школу</string>
    <string name="pick_grade_again">Выбрать другой класс</string>
    <string name="navLabelMain">Главная</string>
    <string name="navLabelSchedule">Расписание</string>
    <string name="navLabelTeachers">Учителя</string>
    <string name="navLabelEvents">События</string>
    <string name="nav_drawer_open" />
    <string name="nav_drawer_close" />
    <string name="schedule">Расписание</string>
    <string name="change_grade">Сменить класс</string>
    <string name="teachers_list">Список учителей</string>
    <string name="search">Поиск</string>
    <string name="no_lessons_today">Сегодня нет уроков.</string>
    <string name="events">Мероприятия</string>
    <string name="choose_grade">Выбрать класс</string>
    <string name="day_type_ordinary">Обычный учебный день</string>
    <string name="time_to_vacation">Время до каникул $d</string>
    <string name="it_is_not_a_bug">Это не очередной баг!</string>
    <string name="it_is_a_future_feature">Это будущая фича!</string>
    <string name="grade_name">%s класс</string>
    <string name="hello">Привет!</string>
    <string name="choose">Выбрать</string>
    <string name="are_you_sure_you_want_to_change_school">Вы действительно хотите сменить школу и класс?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="subgroup_with_number">Подгруппа %d</string>
    <string name="no_subgroups_for_grade">У этого класса нет подгрупп...</string>
    <string name="weekend">Выходные</string>
    <string name="semester_start_end">Начало семестра: %02d.%02d.%d\nКонец семестра: %02d.%02d.%d</string>
</resources>