<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_rectangle_secondary_variant"
    android:paddingHorizontal="15dp"
    android:paddingVertical="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textOnSecondary.textH3"
        android:text="@string/app_name"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textOnSecondary.textH2"
        android:layout_marginTop="20dp"
        android:text="@string/are_you_sure_you_want_to_change_school"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginTop="20dp"
        style="@style/buttonTransparent"
        android:id="@+id/buttonNo"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonYes"
        style="@style/buttonPrimary"
        android:layout_marginTop="10dp"
        android:text="@string/yes"/>

</LinearLayout>