<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">

    <TextView
        android:id="@+id/textNoResponseHeader"
        style="@style/textOnPrimary.textH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/no_response_header"
        app:layout_constraintBottom_toTopOf="@id/textNoResponseDescription" />

    <TextView
        android:id="@+id/textNoResponseDescription"
        style="@style/textOnPrimary.textH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/no_response_description"
        app:layout_constraintBottom_toTopOf="@id/buttonTryAgain" />


    <Button
        android:id="@+id/buttonTryAgain"
        style="@style/buttonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChooseAnotherSchool"
        style="@style/buttonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_school_again"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTryAgain" /></androidx.constraintlayout.widget.ConstraintLayout>