<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center"
        android:background="@drawable/linear_rectangle_secondary_variant"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageItIsNotABug"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/it_is_not_a_bug"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textOnSecondary.textH2"
            android:text="@string/it_is_not_a_bug"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textOnSecondary.textH3"
            android:text="@string/it_is_a_future_feature"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonPrimary"
            android:id="@+id/buttonCancel"
            android:text="@string/cancel"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</FrameLayout>