<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MainFragment"
    android:background="?attr/colorPrimaryVariant">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/linearDayOfWeekHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_rectangle_secondary_variant"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/textDayOfWeek"
                    style="@style/textOnSecondary.textH4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="Monday"
                    android:paddingHorizontal="20dp"/>
                <Button
                    android:id="@+id/buttonSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/buttonPrimary"
                    android:text="@string/schedule"
                    android:layout_weight="1"
                    android:layout_gravity="end" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearScheduleMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_rectangle_secondary_variant"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/textNoLessons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_lessons_today"
                style="@style/textOnSecondary.textH4"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:gravity="center"
                android:background="@drawable/linear_rectangle_secondary_variant"/>
            <ProgressBar
                android:id="@+id/progressBarTodaySchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="?attr/colorOnPrimary"
                android:padding="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/linear_rectangle_secondary_variant"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/imageDayType"
                    android:src="@drawable/day_type_ordinary"
                    android:scaleType="centerCrop"

                    android:clipToOutline="true"/>
                <TextView
                    android:id="@+id/textDayType"
                    style="@style/textOnSecondary.textH3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Ordinary school day"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"/>
                <TextView
                    android:id="@+id/textTimeToHolidays"
                    style="@style/textOnSecondary.textH4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="20 days to the holidays"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/buttonEvents"
                    style="@style/buttonPrimary"
                    android:text="@string/events"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>